tests/sksl/errors/golden/UseWithoutInitializeBinaryExpr.glsl
### Compilation failed:

Updated & out!
CFG scan!
error: 1: 'x' has not been assigned
1 error
